# mcp-jira-server

./: .gitignore  CONTEXT.md  CURSOR.md  Makefile  README.md  REQUIREMENTS.md  TEST_PLAN.md  example_mcp_jira_server.yaml  jira_extractor.py  pyproject.toml  requirements-test.txt  requirements.txt
.github/badges/: coverage.json
.github/workflows/: coverage-badge.yml  coverage-check.yml  pr-check.yml
docs/: PRINCIPLES.md  REQUIREMENTS.md  TEST_PLAN_INTEGRATION.md  TEST_PLAN_UNIT.md  TODO.md
jira_extractor/: __init__.py  cli.py  client.py  test_cli.py  test_client.py  test_features.py
mcp_jira_server/: __init__.py  config.py  get_field_metadata.py  get_issue.py  models.py  search.py  server.py  test_async.py  test_cli.py  test_common.py  test_config.py  test_get_field_metadata.py  test_get_issue.py  test_integration.py  test_models.py  test_search.py  test_server.py  test_tools.py
mcp_jira_server-old/: __main__.py  server.py  test_auth.py  test_cli.py  test_error.py  test_server.py  test_tools.py
scripts/: update_cursor_config.py
